# BIAI

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  rxconfig.py  start.bat  start.ps1
.claude/: settings.local.json
biai/: biai.py
docs/: BIAI_EVOLUTION_PLAN.md  analysis_codebase_map.md  analysis_poc_gaps.md  analysis_test_data.md  analysis_viz_technologies.md  architecture.md  architecture_process_visualization.md  audit_docs_vs_code.md  implementation_report.md  plan_dynamic_process_discovery.md  plan_modernizacji_dynamicznego_kontekstu_biznesowego_2026.md  poc.md  research_app_analysis.md  research_bi_systems.md  research_inference_servers.md  research_llm_asian_models.md  research_llm_models.md  research_llm_western_models.md  research_text2sql_benchmarks.md  ui_ux_analysis.md
scripts/: oracle-discovery-seed.sql  oracle-process-fix.sql  oracle-process-seed.sql  oracle-seed.sql  postgres-process-seed.sql  postgres-seed.sql
tests/: conftest.py  conftest_integration.py  test_ai_questions.py  test_analysis_planner.py  test_business_glossary.py  test_chart_advisor.py  test_data_profiler.py  test_dialect.py  test_discovery.py  test_discovery_v2.py  test_echarts_builder.py  test_echarts_sankey.py  test_enterprise_scale.py  test_event_log.py  test_insight_agent.py  test_integration_db.py  test_integration_pipeline.py  test_language_utils.py  test_llm_helper.py  test_metadata_graph.py  test_model_profiles.py  test_models.py  test_performance.py  test_pipeline.py  (+6 more)
(+112 files in other folders)
