[project]
name = "biai"
version = "0.1.0"
description = "Business Intelligence AI - Local LLM-powered chatbot for Oracle & PostgreSQL"
requires-python = ">=3.13"
dependencies = [
    "reflex>=0.7.0",
    "plotly>=6.0.0",
    "vanna[chromadb,ollama]>=0.7.0,<1.0",
    "chromadb>=0.5.0",
    "sqlglot>=26.0.0",
    "oracledb>=3.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.2.0",
    "pydantic-settings>=2.7.0",
    "cryptography>=44.0.0",
    "structlog>=24.0.0",
    "httpx>=0.28.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: Tests requiring Docker PostgreSQL (port 5433)",
    "ai_questions: AI question tests requiring Docker DB + Ollama",
]
